fix(api doc) fix security scheme and requirements
